# coref

./: .gitignore  MANIFEST.in  README.md  experiments.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_all.sh
spanbertcoref/: __init__.py
spanbertcoref/lib/: coref_ops.py  independent.py  util.py
src/: corefresolve.py  predict.py
src/lib/: independent.py  optimization.py  overlap.py  util.py
src/spanbertcoref/: __main__.py  configure.py  download.py  template.conf
src/spanbertcoref/lib/: coref_ops.py  independent.py  pytorch_to_tf.py  util.py
src/spanbertcoref/lib/bert/: modeling.py  tokenization.py
