[metadata]
name = spanbertcoref
version = 0.0.1
author = Naoya Inoue
author_email = naoya.inoue.lab@gmail.com
description = Coreference Resolver Powered by SpanBERT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/naoya-i/spanbertcoref

[options]
install_requires =
    tqdm
    pyhocon
    importlib_resources
zip_safe = False
package_dir =
    =src
packages = find:
python_requires = >= 3.7
include_package_data = True

[options.entry_points]
console_scripts =
    spanbertcoref = spanbertcoref.__main__:main

[options.packages.find]
where = src